# pairing-plus

./: .travis.yml  Cargo.toml  README.md
benches/: pairing_benches.rs
benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
src/: hash_to_curve.rs  hash_to_field.rs  lib.rs  map_to_curve.rs  serdes.rs
src/bls12_381/: cofactor.rs  ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
src/bls12_381/ec/: g1.rs  g2.rs  mod.rs
src/bls12_381/isogeny/: g1.rs  g2.rs  mod.rs  tests.rs
src/bls12_381/osswu_map/: chain.rs  g1.rs  g2.rs  mod.rs  tests.rs
src/bls12_381/tests/: mod.rs
src/tests/: curve.rs  engine.rs  field.rs  repr.rs
