[package]
name = "pairing-fork"

# Remember to change version string in README.md.
version = "0.17.1"
authors = [
    # authors of the original pairing library
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    # maintainers of this pairing-fork library
    "Riad S. Wahby <kwantam@gmail.com>",
    "Zhenfei Zhang <zhenfei@algorand.com>"
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"

# original documentation
#   documentation = "https://docs.rs/pairing/"
# documentation for this fork
documentation = "https://docs.rs/pairing-fork/"

# original homepage
#   homepage = "https://github.com/ebfull/pairing"
# homepage for this fork
homepage = "https://github.com/algorand/pairing-fork"

# original repo
#   repository = "https://github.com/ebfull/pairing"
# repo for this fork
repository = "https://github.com/algorand/pairing-fork"

[dependencies]
rand = "0.4"
byteorder = "1"
ff = { version = "0.4", features = ["derive"] }
hkdf = "0.8.0"
sha2 = "0.8.0"

[features]
default = []
