[package]
name = "pairing-plus"

# Remember to change version string in README.md.

version = "0.20.1"
authors = [
    # authors of the original pairing library
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    # maintainers of this pairing-fork library
    "Riad S. Wahby <kwantam@gmail.com>",
    "Zhenfei Zhang <zhenfei@algorand.com>"
]
license = "MIT"

description = "Pairing-friendly elliptic curve library"

# original documentation
#   documentation = "https://docs.rs/pairing/"
# documentation for this fork
documentation = "https://docs.rs/pairing-plus/"

# original homepage
#   homepage = "https://github.com/ebfull/pairing"
# homepage for this fork
homepage = "https://github.com/algorand/pairing-plus"

# original repo
#   repository = "https://github.com/ebfull/pairing"
# repo for this fork
repository = "https://github.com/algorand/pairing-plus"

[dependencies]
rand = "0.4"
byteorder = "1"
ff-zeroize = { version = "0.6.3", features = ["derive"]}
zeroize = { version  = "1.1", features = ["zeroize_derive"]}
rand_core = "0.5"
rand_xorshift = "0.2"

[dependencies.digest]
version = "0.8"
features = ["std"]

[dev-dependencies]
sha2 = "0.8"
sha3 = "0.8"

[features]
default = []
